--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "lodash": "^4.17.11",
     "minimatch": "^3.0.4",
     "read-pkg-up": "^2.0.0",
+    "reflect-type-3": "^1.0.0",
     "resolve": "^1.9.0"
   },
   "nyc": {
