--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -28,6 +28,7 @@ rules:
   # dog fooding
   import/no-extraneous-dependencies: "error"
   import/unambiguous: "off"
+  import/reject: "warn"
 
 settings:
   import/resolver:
